--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <!-- main content -->
     <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
-        <header class="flex pt-10 mb-20">
+        <header class="lg:flex pt-10 mb-20">
             <!-- text content -->
              <div>
                 <h1 class="text-5xl md:text-7xl">It's good <br>
@@ -54,6 +54,49 @@
                       </div>
                 </div>
         </header>
+        <!-- feature product section -->
+         <section class="py-8 lg:py-24">
+          <!-- title -->
+           <div class="text-center mb-8">
+            <h1 class="text-3xl md:text-4xl font-bold mb-2">Our Featured Products</h1>
+           <p class="text-gray-600 ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+           </div>
+           <!-- grid card -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 text-center">
+              <!-- product card 1 -->
+               <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                <img class="mx-auto pt-4" src="./images/tea-1.png" alt="">
+                <div class="p-4">
+                  <h2 class="font-bold text-xl pt-">Milk Tea</h2>
+                <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+                </div>
+               </div>
+               <!-- product card 2 -->
+               <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                <img class="mx-auto pt-4" src="./images/tea-2.png" alt="">
+                <div class="p-4">
+                  <h2 class="font-bold text-xl pt-">Black Tea</h2>
+                <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+                </div>
+               </div>
+               <!-- product card 3 -->
+               <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                <img class="mx-auto pt-4" src="./images/tea-3.png" alt="">
+                <div class="p-4">
+                  <h2 class="font-bold text-xl pt-">Lemon Tea</h2>
+                <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+                </div>
+               </div>
+               <!-- product card 4 -->
+               <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                <img class="mx-auto pt-4" src="./images/tea-4.png" alt="">
+                <div class="p-4">
+                  <h2 class="font-bold text-xl pt-">Green Tea</h2>
+                <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+                </div>
+               </div>
+            </div>
+         </section>
     </main> 
 </body>
 </html>
